# CSP

./: .gitignore  README.md  mandelbrot.pbm  output.csv
Assignment1/: CMakeLists.txt  Makefile  README.md  conc_core_aff_1.cpp  conc_core_aff_2.cpp  concurrent.cpp  concurrent_results.txt  concurrent_time.txt  csv_script.py  indep_core_aff_1.cpp  indep_core_aff_1.txt  indep_core_aff_1_time.txt  indep_core_aff_2.cpp  indep_core_aff_2.txt  independent.cpp  independent_results.txt  independent_time.txt  output_independent.csv  overkill_csv_script.py  plot_that_shit.py  result.txt  tuples.cpp  tuples.h
Assignment1/csv/: output_conc_1803.csv  output_conc_20_03.csv  output_conc_core_aff_1_22_03.csv  output_conc_core_aff_2_22_03.csv  output_conc_core_aff_2_24_03.csv  output_indep_01_04.csv  output_indep_17_03.csv  output_indep_20_03.csv  output_indep_28_03.csv  output_indep_core_aff_18_03.csv  output_indep_core_aff_1_20_03.csv  output_indep_core_aff_2_18_03.csv  output_indep_core_aff_2_24_03.csv  output_indep_core_aff_2_28_03.csv
Assignment1/data_analysis_tools/: combine_csv_script.py  csv_and_plot.py  hashbits_perf_numbers_plot.py  output.csv  output_conc.csv  overkill_csv_script.py  tuplespersec_hashbits_plot.py
Assignment1/experiments/: concurrent_time_1.txt  concurrent_time_2.txt  independent_result_1.txt  independent_time.txt
Assignment1/performance_plots/: output_conc_10_03_test1.csv
Assignment1/result textfiles/: concurrent_time_2.txt  independent_results_2.txt  independent_time_1.txt  independent_time_2.txt
Assignment1/result_csv/: output_indep_10_03_test1.csv
Assignment1/result_textfile/: independent_time_1703.txt  independent_time_gemini.txt  indpendent_results_gemini.txt
Assignment1/results/: 01_04_concurrent_results.txt  01_04_concurrent_time.txt  01_04_independent_results.txt  01_04_independent_time.txt  18_03_indep_core_aff_2_time.txt  20_03_concurrent_results.txt  (+20 more)
(+203 files in other folders)
